<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo"
    tools:context=".sobreFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/trab"
        android:layout_width="215dp"
        android:layout_height="120dp"
        android:textStyle="bold"
        android:text="@string/trabalho_para_obten_o_de_nota_bimestral_da_mat_ria_fundamentos_do_desenvolvimento_android_infnet"
        app:layout_constraintBottom_toTopOf="@+id/meunome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:id="@+id/meunome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alexander_morais_de_oliveira"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:fabSize="normal"
        android:contentDescription="@string/botao_compartilhar" />

</androidx.constraintlayout.widget.ConstraintLayout>




